# autobox

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
autobox/: __init__.py  constant.py  constants.py  default.py  default.pyi  enum.py  filter.py  filter.pyi  parameter.py  parameter.pyi  script.py  toolbox.py  toolset.py  type.py  types.py  util.py
data/: basic.atbx  boxbox.lyrx  empty.atbx  filter.atbx  parameters.atbx  root_script.atbx  root_script_simple.atbx  script_execute.atbx  script_validate.atbx  silly_scripts.atbx  toolset_no_root.atbx  toolsets_sans_tools.atbx  toolsets_with_tools.atbx
data/images/: python_icon.tif
data/scripts/: example.py  validator.py
data/scripts/subfolder/: example.py
resources/: parameters.csv  parameters.xlsx
stoolbox/: __init__.py  base.py  constants.py  hints.py  parameter.py  script.py  toolbox.py  toolset.py  types.py  util.py
tests/: base_test.py  conftest.py  default_test.py  filter_test.py  helpers.py  parameter_test.py  script_test.py  toolbox_test.py  toolset_test.py  utiil_test.py  util_test.py
