[project]
name = "fudgeo"
version = "0.8.1"
description = """\
    Automation for ArcGIS Pro toolboxes, script tools, and documentation from Python objects.
    """
readme = "README.md"
authors = [{ name = "Integrated Informatics Inc.", email = "contact@integrated-informatics.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["ArcGIS", "toolbox", "geoprocessing"]
dependencies = []
requires-python = "==3.11"

[tool.setuptools]
packages = ["autobox"]
include-package-data = true

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist", "coverage", "twine", "build"]

[project.urls]
Homepage = "https://github.com/realiii/autobox"
