[project]
name = "autobox"
version = "0.1.0"
description = """\
    Automation for ArcGIS Pro toolboxes, script tools, and \
    documentation from Python objects.\
    """
readme = "README.md"
authors = [{ name = "Integrated Informatics (USA) Inc.", email = "contact@integrated-informatics.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["toolbox", "geoprocessing", "ArcGIS"]
dependencies = []
requires-python = ">=3.11"

[tool.setuptools]
packages = ["autobox"]
include-package-data = true

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage", "twine", "build"]

[project.urls]
Homepage = "https://github.com/realiii/autobox"
